AB#193854: Fixing min-height problem which caused truncated text with 255 cc long body (#679)

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
@@ -80,7 +80,7 @@
 
   &--with-min-height {
     min-height: 45.2rem;
-    max-height: 53.2rem;
+    max-height: 58.2rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
